--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,23 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  uuid: ^4.4.0
+  path_provider: ^2.1.3
+  dartz: ^0.10.1
   flutter_riverpod: ^2.5.1
+  json_serializable: ^6.8.0
+  shared_preferences: ^2.2.3
+  multi_select_flutter: ^4.1.3
+  dio: ^5.4.3+1
+  pretty_dio_logger: ^1.3.1
+  awesome_dio_interceptor: ^1.2.0
+  equatable: ^2.0.5
+  image_picker: ^1.1.2
+  permission_handler: ^11.3.1
+  hive_flutter: ^1.1.0
+  json_annotation: ^4.9.0
+  hive: ^2.2.3
+
 
 dev_dependencies:
   flutter_test:
@@ -47,6 +63,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^3.0.0
+  build_runner: ^2.4.11
+  hive_generator: ^2.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
