--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
   hive_flutter: ^1.1.0
   json_annotation: ^4.9.0
   hive: ^2.2.3
+  connectivity_plus: ^4.0.1
+  liquid_pull_to_refresh: ^3.0.1
 
 
 dev_dependencies:
