--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,8 @@ dependencies:
   mockito: ^5.4.4
   test_cov_console: ^0.2.2
   all_sensors2: ^1.0.1
+  intl: ^0.19.0
+  vibration: ^1.9.0
 
 
 dev_dependencies:
