--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   shimmer: ^3.0.0
   flutter_launcher_icons: ^0.13.1
   local_auth: ^2.3.0
+  url_launcher: ^6.3.0
 
 
 dev_dependencies:
